gl31-master/src/test/deca/codegen/valid/sansobjet/float_addition2.deca
// Description:
//    Test float = float + float
//
// Resultats:
//    Succes : affiche '9.90290e+10'
//
// Historique:
//    cree le 17/01/2021
{
    float i = 9.9e10f;
    float f = i + 2.9e7f;
    print(f);
}
